--- a/app/src/index.css
+++ b/app/src/index.css
@@ -2,14 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --bg-color: #212121;
-  --primary-color: #A855F7;
-  --primary-color-dark: #6D2B8D;
-  --secondary-color: #D4B3F7;
-  --color-white: #FFFFFF;
-}
-
 body {
   margin: 0;
   font-family: "Poppins", -apple-system, BlinkMacSystemFont, "Segoe UI",
@@ -17,7 +9,7 @@ body {
     "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: var(--bg-color);
+  background-color: #171717;
 }
 
 code {
