feat: adicionando as tabelas para as missoes e exercicios

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -22,6 +22,10 @@ code {
   box-sizing: border-box;
 }
 
+.sidebar .text-muted-foreground {
+  color: #ffffff;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
