--- a/app/src/index.css
+++ b/app/src/index.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  --gray-500: #9e9e9e;
+  --gray-400: #bdbdbd;
+  --gray-200: #eeeeee;
+}
+
 body {
   margin: 0;
   font-family: "Poppins", -apple-system, BlinkMacSystemFont, "Segoe UI",
@@ -24,6 +30,24 @@ code {
 
 .sidebar .text-muted-foreground {
   color: #ffffff;
+}
+
+.custom-scroll::-webkit-scrollbar {
+  width: 8px;
+}
+
+.custom-scroll::-webkit-scrollbar-track {
+  background: var(--gray-200);
+  border-radius: 5px;
+}
+
+.custom-scroll::-webkit-scrollbar-thumb {
+  background: var(--gray-400);
+  border-radius: 5px;
+}
+
+.custom-scroll::-webkit-scrollbar-thumb:hover {
+  background: var(--gray-500);
 }
 
 @layer base {
