--- a/app/src/index.css
+++ b/app/src/index.css
@@ -16,6 +16,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #171717;
+  overflow-x: hidden;
 }
 
 code {
